--- a/index.html
+++ b/index.html
@@ -2282,7 +2282,7 @@
             <h2>Confían en Nosotros</h2>
             <div class="trust-badges-container">
                 <img src="Sociedad española.jpg" alt="Sociedad Española de Medicina Estética" class="trust-badge">
-                <img src="union internacional.jpg" alt="Media Logo 1" class="trust-badge">
+                <img src="union internacional.png" alt="Media Logo 1" class="trust-badge">
                 <img src="usa.png" alt="Media Logo 2" class="trust-badge">
                 <img src="Logo+MEE-footer.webp" alt="Certificación" class="trust-badge">
             </div>
@@ -3106,3 +3106,4 @@
     </script>
 </body>
 </html>
+
